--- a/.gitignore
+++ b/.gitignore
@@ -574,11 +574,51 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 
-zRascunhos
-query.*
-query2.*
-tst
-APIgeladeiraIOT
+zRascunhos/
+tst/
+APIgeladeiraIOT/
+
+# Compiled object files
+*.o
+*.obj
+*.dll
+*.exe
+*.log
+*.pdb
+*.cache
+*.ilk
+*.meta
+
+# Visual Studio
+.vscode/
+.vs/
+*.user
+*.suo
+*.userosscache
+*.sln.docstates
+
+# .NET
+bin/
+obj/
+*.nuspec
+*.nupkg
+
+# NuGet
+*.nupkg
+project.lock.json
+project.fragment.lock.json
+artifacts/
+
+# Dependency folders
+node_modules/
+packages/
+
+# GitHub
+.DS_Store
+.git/
+.idea/
+*.orig
+*.patch
 #####
 # End of core ignore list, below put you custom 'per project' settings (patterns or path)
 #####
